Utworzono za pomocą Colab

--- a/Prolog2.ipynb
+++ b/Prolog2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMepRup7doO3Cw+0SpSlJ0p",
+      "authorship_tag": "ABX9TyMzkhiyLPmHq1DoUEwmwZdJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1304,7 +1304,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##**Sprawdzanie, czy istnieje bezpośrednie połączenie**\n",
+        "##**1. Sprawdzanie, czy istnieje bezpośrednie połączenie**\n",
         "\n",
         "```\n",
         "droga(X, Y) :- droga(X, Y, _).\n",
@@ -1314,7 +1314,7 @@
         " - Prolog przeszukuje bazę danych w poszukiwaniu faktów w formacie `droga(X, Y, _)`.\n",
         "  - Jeśli taki fakt istnieje, wynik to true.\n",
         "\n",
-        "## **Obliczanie czasu przejazdu**\n",
+        "## **2. Obliczanie czasu przejazdu**\n",
         "\n",
         "```\n",
         "czas_przejazdu(X, Y, T) :-\n",
@@ -1337,7 +1337,7 @@
         "  - Jeśli nie można znaleźć trasy do `Y`, zwraca infinity.\n",
         "\n",
         "\n",
-        "##**Wyznaczanie najkrótszej trasy**\n",
+        "##**3. Wyznaczanie najkrótszej trasy**\n",
         "\n",
         "```\n",
         "najkrotsza_trasa(X, Y, NajkrotszaTrasa, NajkrotszyCzas) :-\n",
@@ -1352,7 +1352,7 @@
         "- Funkcja `sort` sortuje listę tras według czasu przejazdu.\n",
         "- Najkrótsza trasa: Pierwszy element posortowanej listy to najkrótsza trasa.\n",
         "\n",
-        "##**Znajdowanie wszystkich dostępnych miast**\n",
+        "##**4. Znajdowanie wszystkich dostępnych miast**\n",
         "```\n",
         "miasta_dostepne(X, Miasta) :-\n",
         "    findall(Y, (droga(X, Y, _); droga(Y, X, _)), MiastaUnikalne),\n",
@@ -1364,7 +1364,7 @@
         "- Funkcja `list_to_set` usuwa duplikaty, tworząc listę unikalnych miast.\n",
         "\n",
         "\n",
-        "##**Dodawanie nowego połączenia**\n",
+        "##**5. Dodawanie nowego połączenia**\n",
         "\n",
         "```\n",
         "dodaj_droga(X, Y, Czas) :-\n",
@@ -1376,7 +1376,7 @@
         "- Funkcja `assertz` dodaje nowe fakty `droga(X, Y, Czas)` i` droga(Y, X, Czas)` do bazy danych.\n",
         "- Nowe połączenie działa w obu kierunkach.\n",
         "\n",
-        "##**Usuwanie połączenia**\n",
+        "##**6.Usuwanie połączenia**\n",
         "\n",
         "```\n",
         "usun_droga(X, Y) :-\n",
@@ -1386,7 +1386,7 @@
         "###**Opis:**\n",
         "- Funkcja `retract: Usuwa istniejące fakty droga(X, Y, _) i droga(Y, X, _) z bazy danych.\n",
         "\n",
-        "## **Sprawdzanie dwukierunkowości drogi**\n",
+        "## **7. Sprawdzanie dwukierunkowości drogi**\n",
         "```\n",
         "droga_obie_strony(X, Y) :-\n",
         "    droga(X, Y, _),\n",
@@ -1397,7 +1397,7 @@
         "\n",
         "- Sprawdza, czy istnieją drogi `X -> Y` i `Y -> X` w bazie danych.\n",
         "\n",
-        "## **Znalezienie miasta z największą liczbą połączeń**\n",
+        "## **8. Znalezienie miasta z największą liczbą połączeń**\n",
         "```\n",
         "miasto_z_najwieksza_liczba_polaczen(Miasto) :-\n",
         "    findall((Liczba, Miasto), (miasto(Miasto), liczba_polaczen(Miasto, Liczba)), Polaczenia),\n",
@@ -1673,45 +1673,72 @@
       }
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "% Zapytania do reguł związanych z dynamicznym zarządzaniem ocenami:\n",
+        "##Zapytania do reguł związanych z dynamicznym zarządzaniem ocenami:\n",
         "\n",
-        "% Dodanie nowej oceny:\n",
-        "\n",
-        "dodaj_ocene(uzytkownik2, '1984', 5). +\n",
-        "\n",
-        "% Usunięcie oceny:\n",
-        "\n",
-        "usun_ocene(uzytkownik1, 'Hobbit'). +\n",
-        "\n",
-        "% Zaktualizowanie oceny:\n",
-        "\n",
-        "zaktualizuj_ocene(uzytkownik1, 'Pan Tadeusz', 5). +\n",
-        "\n",
-        "% Zapytania do reguły polecane_ksiazki/2:\n",
-        "\n",
-        "polecane_ksiazki(uzytkownik1, fantasy). =\n",
+        "##1. Dodanie nowej oceny:\n",
+        "```\n",
+        "dodaj_ocene(uzytkownik2, '1984', 5).\n",
+        "```\n",
+        "### Wynik:\n",
+        "```\n",
+        "True\n",
+        "```\n",
+        "##2. Usunięcie oceny:\n",
+        "```\n",
+        "usun_ocene(uzytkownik1, 'Hobbit').\n",
+        "```\n",
+        "### Wynik:\n",
+        "```\n",
+        "True\n",
+        "```\n",
+        "##3. Zaktualizowanie oceny:\n",
+        "```\n",
+        "zaktualizuj_ocene(uzytkownik1, 'Pan Tadeusz', 5).\n",
+        "```\n",
+        "### Wynik:\n",
+        "```\n",
+        "True\n",
+        "```\n",
+        "##4. Zapytania do reguły polecane_ksiazki/2:\n",
+        "```\n",
+        "polecane_ksiazki(uzytkownik1, fantasy).\n",
+        "```\n",
+        "###Wynik:\n",
+        "```\n",
         "Polecane książki dla użytkownika uzytkownik1 w gatunku fantasy: [Hobbit, Władca pierścieni, Mistrz i Małgorzata, Harry Potter i Kamień Filozoficzny]\n",
-        "\n",
-        "% Zapytania do reguły polecane_ksiazki_na_podstawie_preferencji/1:\n",
-        "\n",
-        "polecane_ksiazki_na_podstawie_preferencji(uzytkownik2). =\n",
+        "```\n",
+        "##5. Zapytania do reguły polecane_ksiazki_na_podstawie_preferencji/1:\n",
+        "```\n",
+        "polecane_ksiazki_na_podstawie_preferencji(uzytkownik2).\n",
+        "```\n",
+        "###Wynik:\n",
+        "```\n",
         "Polecane książki dla użytkownika uzytkownik2 na podstawie preferencji:\n",
         "Hobbit\n",
         "Władca pierścieni\n",
         "Harry Potter i Kamień Filozoficzny\n",
         "Zbrodnia i kara\n",
-        "+\n",
+        "```\n",
+        "```\n",
+        "True\n",
+        "```\n",
         "\n",
-        "% Zapytania do reguły srednia_ocena/2:\n",
-        "\n",
-        "srednia_ocena('W pustyni i w puszczy', SredniaOcena). =\n",
+        "## 6. Zapytania do reguły srednia_ocena/2:\n",
+        "```\n",
+        "srednia_ocena('W pustyni i w puszczy', SredniaOcena).\n",
+        "```\n",
+        "###Wynik:\n",
+        "```\n",
         "SredniaOcena = 4.4\n",
-        "\n",
-        "% Zapytania do reguły polecane_na_podstawie_ocen/1:\n",
-        "\n",
-        "polecane_na_podstawie_ocen(uzytkownik4). =\n",
+        "```\n",
+        "##7. Zapytania do reguły polecane_na_podstawie_ocen/1:\n",
+        "```\n",
+        "polecane_na_podstawie_ocen(uzytkownik4).\n",
+        "```\n",
+        "###Wynik:\n",
+        "```\n",
         "Polecane książki dla użytkownika uzytkownik4 na podstawie ocen:\n",
         "W pustyni i w puszczy\n",
         "Hobbit\n",
@@ -1734,10 +1761,17 @@
         "Wojna i pokój\n",
         "Odyseja\n",
         "Złodziejka książek\n",
-        "+\n",
+        "```\n",
+        "```\n",
+        "True\n",
+        "```\n",
         "\n",
-        "% Zapytania do reguły ksiazki_po_ocenie_i_gatunku/1:\n",
-        "ksiazki_po_ocenie_i_gatunku(fantasy). =\n",
+        "##8. Zapytania do reguły ksiazki_po_ocenie_i_gatunku/1:\n",
+        "```\n",
+        "ksiazki_po_ocenie_i_gatunku(fantasy).\n",
+        "```\n",
+        "###Wynik:\n",
+        "```\n",
         "Książki w gatunku fantasy z oceną >= 4:\n",
         "Hobbit\n",
         "Hobbit\n",
@@ -1758,20 +1792,21 @@
         "Harry Potter i Kamień Filozoficzny\n",
         "Harry Potter i Kamień Filozoficzny\n",
         "Harry Potter i Kamień Filozoficzny\n",
-        "+"
+        "```\n",
+        "```\n",
+        "True\n",
+        "```"
       ],
       "metadata": {
-        "id": "KIZAQl6Er1gY"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "NYxwWFuIq4GN"
+      }
     },
     {
       "cell_type": "markdown",
       "source": [
         "\n",
         "##**Zapytania do reguł związanych z dynamicznym zarządzaniem ocenami:**\n",
-        "## Dodanie nowej oceny\n",
+        "## **1. Dodanie nowej oceny**\n",
         "```\n",
         "dodaj_ocene(Uzytkownik, Ksiazka, Ocena) :-\n",
         "    assertz(ocena(Uzytkownik, Ksiazka, Ocena)).\n",
@@ -1783,7 +1818,7 @@
         "- `ocena(Uzytkownik, Ksiazka, Ocena)` tworzy fakt o ocenach książek przez użytkowników, gdzie `Uzytkownik` to osoba oceniająca, `Ksiazka` to tytuł książki, a `Ocena` to jej wartość *(np. 5)*.\n",
         "- Kiedy wywołasz `dodaj_ocene(uzytkownik2, '1984', 5)`, fakt `ocena(uzytkownik2, '1984', 5)` zostanie dodany do bazy danych.\n",
         "\n",
-        "##Usunięcie oceny\n",
+        "##**2. Usunięcie oceny**\n",
         "\n",
         "\n",
         "```\n",
@@ -1796,7 +1831,7 @@
         "- Wzorzec `ocena(Uzytkownik, Ksiazka, _)` oznacza, że chcemy usunąć ocenę dla książki `Ksiazka` wystawioną przez użytkownika `Uzytkownik` bez względu na wartość oceny (dlatego `_` oznacza dowolną wartość).\n",
         "- Na przykład, wywołując `usun_ocene(uzytkownik1, 'Hobbit')`, usuwa się ocenę książki \"Hobbit\" wystawioną przez `uzytkownik1`.\n",
         "\n",
-        "##Zaktualizowanie oceny\n",
+        "##**3. Zaktualizowanie oceny**\n",
         "\n",
         "\n",
         "```\n",
@@ -1804,12 +1839,12 @@
         "    usun_ocene(Uzytkownik, Ksiazka),\n",
         "    dodaj_ocene(Uzytkownik, Ksiazka, NowaOcena).\n",
         "```\n",
-        "###Opis:\n",
+        "###**Opis:**\n",
         "- Reguła `zaktualizuj_ocene/3` najpierw usuwa starą ocenę książki, a potem dodaje nową.\n",
         "- Używa najpierw reguły `usun_ocene/2` do usunięcia istniejącej oceny, a następnie reguły `dodaj_ocene/3` do dodania nowej oceny.\n",
         "- Na przykład, wywołując `zaktualizuj_ocene(uzytkownik1, 'Pan Tadeusz', 5)`, usuwasz starą ocenę książki \"Pan Tadeusz\" i dodajesz ocenę 5.\n",
         "\n",
-        "##**Zapytania do reguły polecane_ksiazki**\n",
+        "##**4. Zapytania do reguły polecane_ksiazki**\n",
         "\n",
         "\n",
         "```\n",
@@ -1836,7 +1871,7 @@
         "- Następnie, wynik jest wyświetlany na ekranie przy pomocy `write/1`, prezentując listę książek.\n",
         "- Na przykład, `polecane_ksiazki(uzytkownik1, fantasy)` wyświetli książki w gatunku fantasy ocenione przez `uzytkownik1` na co najmniej 4.\n",
         "\n",
-        "##**Zapytania do reguły polecane_ksiazki_na_podstawie_preferencji**\n",
+        "##**5. Zapytania do reguły polecane_ksiazki_na_podstawie_preferencji**\n",
         "\n",
         "```\n",
         "polecane_ksiazki_na_podstawie_preferencji(Uzytkownik) :-\n",
@@ -1859,7 +1894,7 @@
         "  - Użytkownik ocenił je na co najmniej 4.\n",
         "- Wynik jest wyświetlany przy użyciu `write/1` oraz `maplist(writeln, Ksiazek)` do wyświetlania książek w nowych liniach.\n",
         "- Na przykład, `polecane_ksiazki_na_podstawie_preferencji(uzytkownik2)` wyświetli książki, które użytkownik `uzytkownik2` lubi i ocenił na co najmniej 4.\n",
-        "##**Zapytania do reguły srednia_ocena**\n",
+        "##**6. Zapytania do reguły srednia_ocena**\n",
         "\n",
         "\n",
         "```\n",
@@ -1878,7 +1913,7 @@
         "- Średnia ocena jest obliczana jako suma ocen podzielona przez liczbę ocen.\n",
         "- Na przykład, `srednia_ocena('W pustyni i w puszczy', SredniaOcena)` zwróci średnią ocenę książki \"W pustyni i w puszczy\".\n",
         "\n",
-        "##**Zapytania do reguły polecane_na_podstawie_ocen**\n",
+        "##**7. Zapytania do reguły polecane_na_podstawie_ocen**\n",
         "\n",
         "\n",
         "```\n",
@@ -1900,7 +1935,7 @@
         "- `findall/3` zbiera książki, które użytkownik ocenił na co najmniej 4, a `ksiazka/3` zapewnia, że książka istnieje w bazie danych.\n",
         "- Wynik jest wyświetlany na ekranie przy użyciu `write/1` i `maplist(writeln, Ksiazek)`.\n",
         "\n",
-        "##**Zapytania do reguły ksiazki_po_ocenie_i_gatunku**\n",
+        "##**8. Zapytania do reguły ksiazki_po_ocenie_i_gatunku**\n",
         "```\n",
         "ksiazki_po_ocenie_i_gatunku(Gatunek) :-\n",
         "    findall(Ksiazka,\n",
